<resources>
    <string name="app_name">BalisticCalc</string>
    <string name="balistic_calculator">Balistic Calculator</string>
    <string name="distance_yards">Distance, yards</string>
    <string name="target_elevation_degrees">Target elevation, deg</string>
    <string name="wind_speed_mph">Wind speed, mph</string>
    <string name="wind_direction_degrees">Wind direction, degrees</string>
    <string name="atmosphere">Atmosphere:</string>
    <string name="imageDistance">TODO</string>
    <string name="rifle">Rifle:</string>
    <string name="scope1">Scope:</string>
    <string name="shooting_atmosphere">Shooting Atmosphere</string>
    <string name="cartridge">Cartridge:</string>
    <string name="calculate1">Calculate</string>
    <string name="vert">Vert.</string>
    <string name="horiz">Horiz.</string>
    <string name="moa">MOA</string>
    <string name="clicks">Clicks</string>
    <string name="inches">Inches</string>
    <string name="mrad">MRAD</string>
    <string name="additional_information1">Additional Information</string>
    <string name="textviewAtmosph">TextView</string>
    <string name="altitude_feet">Altitude, feet</string>
    <string name="temperature_f1">Temperature, F</string>
    <string name="pressure_inches">Pressure, inches</string>
    <string name="confirm1">Confirm</string>
    <string name="back1">Back</string>
    <string name="cartridge_settings">Cartridge Settings</string>
    <string name="name">Name</string>
    <string name="bullet_weight">Bullet Weight</string>
    <string name="ballistic_coefficient">Ballistic coefficient</string>
    <string name="ballistic_speed_f_s">Ballistic speed, f/s</string>
    <string name="temperature_f">Temperature, F</string>
    <string name="buttonConfirm">Button</string>
    <string name="confirm2">Confirm</string>
    <string name="back2">Back</string>
    <string name="confirm">Confirm</string>
    <string name="back3">Back</string>
    <string name="calculate">Calculate</string>
    <string name="additional_information">Additional Information</string>
    <string name="speed_at_the_target_f_s">Speed at the target, f/s:</string>
    <string name="speed_of_sound_f_s">Speed of sound, f/s:</string>
    <string name="flight_time_sec">Flight time, sec:</string>
    <string name="back4">Back</string>
    <string name="rifle_settings">Rifle Settings</string>
    <string name="name_of_selected_rifle">Name of selected rifle</string>
    <string name="scope">Scope:</string>
    <string name="grid">Grid:</string>
    <string name="cartridgeset">Cartridge</string>
    <string name="back">Back</string>
    <string name="sighting_distance_yards">Sighting distance, yards</string>
    <string name="scope_settings">Scope Settings</string>
    <string name="sight_height_inches">Sight height, inches</string>
    <string name="vert_click_moa">Vert. click, MOA</string>
    <string name="_0_0">0.0</string>
    <string name="_0_0_1">0.0</string>
    <string name="_0_02">0.0</string>
    <string name="_0_03">0.0</string>
    <string name="buttongotorifle">Button</string>
    <string name="_0_0altitude">0.0</string>
    <string name="_0_0TempF">0.0</string>
    <string name="_0_0PressureInc">0.0</string>
    <string name="_0_0BulletWeight">0.0</string>
    <string name="_0_0BallisticCoef">0.0</string>
    <string name="_0_0BallisticSpeed">0.0</string>
    <string name="_0_0TempF">0.0</string>
    <string name="horiz_click_moa">Horiz. click, MOA</string>
    <string name="_0_0SightD">0.0</string>
    <string name="_0_0SightHeight">0.0</string>
    <string name="_0_0VertClick">0.0</string>
    <string name="_0_0HorizClick">0.0</string>
    <string name="confirm6">Confirm</string>
    <string name="back6">Back</string>
</resources>