<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageDistance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/firstTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textCartridge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:drawableRight="@drawable/bullettransform"
                android:text="@string/cartridge"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textScope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/scope"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageScope"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="372dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/scope"
                app:srcCompat="@drawable/scope" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textShootingAtm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/shooting_atmosphere"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageShootAtm"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="420dp"
                android:contentDescription="@string/shooting_atmosphere"
                app:srcCompat="@drawable/atmosphere" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAtmosphere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/atmosphere"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageAtmosphere"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="284dp"
                android:contentDescription="@string/atmosphere"
                app:srcCompat="@drawable/atmosphere" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textRifle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/rifle"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageRifle"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="323dp"
                android:contentDescription="@string/rifle"
                app:srcCompat="@drawable/rifle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="92dp"
                android:text="@string/distance_yards"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="36dp"
                android:layout_height="32dp"
                android:layout_marginStart="87dp"
                android:layout_marginLeft="87dp"
                android:layout_marginTop="96dp"
                android:contentDescription="@string/imageDistance"
                tools:srcCompat="@drawable/distance" />

            <EditText
                android:id="@+id/editTextDistance"
                android:layout_width="75dp"
                android:layout_height="43dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_0_0"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTargetElevation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/target_elevation_degrees"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageDegree"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/target_elevation_degrees"
                app:srcCompat="@drawable/degree" />

            <EditText
                android:id="@+id/editTextTargetElevation"
                android:layout_width="75dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/_0_0_1"
                android:importantForAutofill="no"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/wind_speed_mph"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageWind"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/wind_speed_mph"
                app:srcCompat="@drawable/winds" />

            <EditText
                android:id="@+id/editTextWindSpeed"
                android:layout_width="75dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/_0_02"
                android:importantForAutofill="no"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textWDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/wind_direction_degrees"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageWindDirection"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/wind_direction_degrees"
                app:srcCompat="@drawable/windsdirection" />

            <EditText
                android:id="@+id/editTextWindDirection"
                android:layout_width="75dp"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/_0_03"
                android:importantForAutofill="no"
                android:inputType="number" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/secondTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textMOA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/moa"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textMrad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mrad"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textInches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/inches"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textClicks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/clicks"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textVert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="596dp"
                android:text="@string/vert"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textHoriz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/horiz"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAditionalInf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/additional_information"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageInfo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/additional_information"
            app:srcCompat="@drawable/info" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonGoToRifle"
        android:layout_width="380dp"
        android:layout_height="157dp"
        android:layout_marginTop="336dp"
        android:onClick="@string/buttongotorifle"
        android:text="@string/buttongotorifle"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:background="@color/Green"
        android:text="@string/calculate"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />


</LinearLayout>